--- a/src/app/modules/auth/components/login-view/login-view.component.html
+++ b/src/app/modules/auth/components/login-view/login-view.component.html
@@ -11,7 +11,7 @@
           </ion-row>
 
           <ion-row>
-            <ion-card class="ion-margin-top expand-full">
+            <ion-card class="ion-margin-top expand-full no-border">
               <div class="expand-full ion-padding-start ion-padding-end" class="ion-margin">
                 <ion-item class="expand-full">
                   <ion-col class="ion-no-padding">
@@ -74,7 +74,7 @@
                 <ion-label>{{ error }}</ion-label>
               </ion-item>
             </ion-card>
-            <ion-card class="ion-margin-top expand-full ion-text-center">
+            <ion-card class="ion-margin-top expand-full ion-text-center no-border">
               <div class="ion-padding-top ion-padding-bottom ">
 
                 <ion-text >
