--- a/src/app/nav/navbar/navbar.component.html
+++ b/src/app/nav/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!-- <ion-header> -->
-<ion-toolbar color="dark">
+<ion-toolbar color="light">
   <ion-buttons class="clickeable" [routerLink]="['/']" slot="start">
     <ion-thumbnail>
       <ion-img src="../../../assets/GFC logo.png"></ion-img>
