Solucion a bug, daba error en los casos de concursantes sin fotoclub asignado

--- a/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -147,13 +147,9 @@
                                     <ion-col>
                                       <ion-card-subtitle title="Código de la obra">{{r.image.code}}</ion-card-subtitle>
                                       
-                                      <ion-text title="Nombre de la obra">
-                                        <b>{{r.image.title}}</b>
-                                      </ion-text>
+                                      <ion-text title="Nombre de la obra"> <b>{{r.image.title}}</b> </ion-text>
         
-                                      <ion-card-subtitle title="Sección">
-                                        <i>{{r.section.name}}</i>
-                                      </ion-card-subtitle>
+                                      <ion-card-subtitle title="Sección"><i>{{r.section.name}}</i> </ion-card-subtitle>
                                       
                                     </ion-col>
                                   </ion-item>
